--- a/.github/workflows/Push-to-ACRPersonalEdition.yml
+++ b/.github/workflows/Push-to-ACRPersonalEdition.yml
@@ -15,16 +15,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Push to ACR (Preserve Namespace Unambiguously)
+      - name: Push to ACR (Skip on Pull Failure)
         env:
           ACR_TARGET_REGISTRY: crpi-dsuujqmghq4pfebi.cn-hangzhou.personal.cr.aliyuncs.com/my-dify-prod
           ALIYUN_ACCESS_KEY_ID: ${{ secrets.ALIYUN_ACCESS_KEY_ID }}
           ALIYUN_ACCESS_KEY_SECRET: ${{ secrets.ALIYUN_ACCESS_KEY_SECRET }}
         run: |
           ACR_REGISTRY_HOST=$(echo "$ACR_TARGET_REGISTRY" | cut -d'/' -f1)
-          
+      
           if [ -z "$ALIYUN_ACCESS_KEY_ID" ] || [ -z "$ALIYUN_ACCESS_KEY_SECRET" ]; then
-            echo "❌ Missing AccessKey in environment secrets."
+            echo "❌ Missing AccessKey."
             exit 1
           fi
       
@@ -36,6 +36,8 @@ jobs:
           IFS=',' read -r -a IMAGES <<< "${{ github.event.inputs.docker_images }}"
           for IMAGE in "${IMAGES[@]}"; do
             IMAGE=$(echo "$IMAGE" | xargs)
+            [ -z "$IMAGE" ] && continue
+      
             echo ">>> Processing: $IMAGE"
       
             if [[ "$IMAGE" == *":"* ]]; then
@@ -46,7 +48,6 @@ jobs:
               TAG_PART="latest"
             fi
       
-            # ✅ 无歧义转换：/ → __
             CLEAN_REPO=$(echo "$REPO_PART" | sed 's/\//__/g')
             CLEAN_REPO=$(echo "$CLEAN_REPO" | tr -cd 'a-zA-Z0-9._-')
             CLEAN_REPO=$(echo "$CLEAN_REPO" | sed 's/___*/__/g')
@@ -56,7 +57,13 @@ jobs:
             TARGET_IMAGE="$ACR_TARGET_REGISTRY/$CLEAN_REPO:$TAG_PART"
             echo "Tagging as: $TARGET_IMAGE"
       
-            docker pull "$IMAGE" --platform linux/amd64
+            # ✅ 跳过拉取失败的镜像
+            if ! docker pull "$IMAGE" --platform linux/amd64; then
+              echo "⚠️  Warning: Skipping '$IMAGE' due to pull failure."
+              echo "----------------------------------------"
+              continue
+            fi
+      
             docker tag "$IMAGE" "$TARGET_IMAGE"
             docker push "$TARGET_IMAGE"
             docker rmi "$IMAGE" "$TARGET_IMAGE" 2>/dev/null || true
@@ -67,7 +74,3 @@ jobs:
           done
       
           docker logout "$ACR_REGISTRY_HOST"
-                done
-
-          # 登出（可选）
-          docker logout "$(echo $ACR_TARGET_REGISTRY | cut -d'/' -f1)"
