--- a/.github/workflows/Push-to-ACRPersonalEdition.yml
+++ b/.github/workflows/Push-to-ACRPersonalEdition.yml
@@ -1,56 +1,46 @@
-name: Sync Docker Images to ACR
+name: Push Images to Fixed ACR Address
 
 on:
   workflow_dispatch:
     inputs:
       docker_images:
-        description: 'Docker images to sync (comma-separated, e.g. nginx:latest,langgenius/dify-api:1.11.2)'
+        description: 'Docker 镜像列表（英文逗号分隔）'
         required: true
-        type: string
+        default: 'nginx:latest,langgenius/dify-api:1.11.2'
 
 jobs:
-  sync-to-acr:
+  push-to-acr:
     runs-on: ubuntu-22.04
+    environment: acr-prod  # ← 关键！必须和你的 Environment 名一致
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Sync images to ACR (Skip on pull failure)
+      
+      - name: Push to ACR (Skip on Pull Failure)
         env:
-          # ⚠️ 替换为你自己的 ACR 公网地址（格式：{实例ID}.{region}.personal.cr.aliyuncs.com/{命名空间}）
           ACR_TARGET_REGISTRY: crpi-dsuujqmghq4pfebi.cn-hangzhou.personal.cr.aliyuncs.com/my-dify-prod
           ALIYUN_ACCESS_KEY_ID: ${{ secrets.ALIYUN_ACCESS_KEY_ID }}
           ALIYUN_ACCESS_KEY_SECRET: ${{ secrets.ALIYUN_ACCESS_KEY_SECRET }}
         run: |
-          set -euo pipefail
-
           ACR_REGISTRY_HOST=$(echo "$ACR_TARGET_REGISTRY" | cut -d'/' -f1)
-
-          if [ -z "${ALIYUN_ACCESS_KEY_ID:-}" ] || [ -z "${ALIYUN_ACCESS_KEY_SECRET:-}" ]; then
-            echo "❌ Missing ALIYUN_ACCESS_KEY_ID or ALIYUN_ACCESS_KEY_SECRET in secrets."
+      
+          if [ -z "$ALIYUN_ACCESS_KEY_ID" ] || [ -z "$ALIYUN_ACCESS_KEY_SECRET" ]; then
+            echo "❌ Missing AccessKey."
             exit 1
           fi
-
-          echo "🔐 Logging into ACR..."
+      
           echo "$ALIYUN_ACCESS_KEY_SECRET" | docker login \
             --username "$ALIYUN_ACCESS_KEY_ID" \
             --password-stdin \
             "$ACR_REGISTRY_HOST"
-
-          echo "📥 Input images: ${{ github.event.inputs.docker_images }}"
+      
           IFS=',' read -r -a IMAGES <<< "${{ github.event.inputs.docker_images }}"
-
           for IMAGE in "${IMAGES[@]}"; do
-            # Trim whitespace
             IMAGE=$(echo "$IMAGE" | xargs)
             [ -z "$IMAGE" ] && continue
-
+          
             echo ">>> Processing: $IMAGE"
-
-            # Parse repo and tag
+          
             if [[ "$IMAGE" == *":"* ]]; then
               REPO_PART="${IMAGE%:*}"
               TAG_PART="${IMAGE##*:}"
@@ -58,41 +48,28 @@ jobs:
               REPO_PART="$IMAGE"
               TAG_PART="latest"
             fi
-
-            # ✅ SAFE CONVERSION: / → __, preserve -, _, .
+          
+            # ✅ 安全转换：/ → __，保留 - 和 _
             CLEAN_REPO=$(echo "$REPO_PART" | sed 's/\//__/g')
-            # IMPORTANT: '-' at the END to avoid tr range interpretation
-            CLEAN_REPO=$(echo "$CLEAN_REPO" | tr -cd 'a-zA-Z0-9._-')
-            # Merge excessive underscores (but keep __ as separator)
+            CLEAN_REPO=$(echo "$CLEAN_REPO" | tr -cd 'a-zA-Z0-9._-')  # - at end!
             CLEAN_REPO=$(echo "$CLEAN_REPO" | sed 's/___*/__/g')
-            # Remove leading/trailing - or _
             CLEAN_REPO=$(echo "$CLEAN_REPO" | sed 's/^[-_]*//' | sed 's/[-_]*$//')
-            # Fallback only if truly empty
-            if [ -z "$CLEAN_REPO" ]; then
-              CLEAN_REPO="unknown"
-              echo "⚠️  Warning: Repo name became empty, using 'unknown'"
-            fi
-
+            [ -z "$CLEAN_REPO" ] && CLEAN_REPO="unknown"
+          
             TARGET_IMAGE="$ACR_TARGET_REGISTRY/$CLEAN_REPO:$TAG_PART"
-            echo "📦 Tagging as: $TARGET_IMAGE"
-
-            # ✅ Skip if pull fails (private/missing image)
+            echo "Tagging as: $TARGET_IMAGE"
+          
             if ! docker pull "$IMAGE" --platform linux/amd64; then
-              echo "⚠️  Skipping '$IMAGE': pull failed (private or not found)"
-              echo "----------------------------------------"
+              echo "⚠️  Skipping due to pull failure: $IMAGE"
               continue
             fi
-
+          
             docker tag "$IMAGE" "$TARGET_IMAGE"
             docker push "$TARGET_IMAGE"
-
-            # Clean up local images to save space
             docker rmi "$IMAGE" "$TARGET_IMAGE" 2>/dev/null || true
             docker image prune -f
-
-            echo "✅ Success: $IMAGE → $TARGET_IMAGE"
-            echo "----------------------------------------"
+          
+            echo "<<< Success: $IMAGE → $TARGET_IMAGE"
           done
 
           docker logout "$ACR_REGISTRY_HOST"
-          echo "🎉 Sync completed!"
